footer alignment issues

--- a/styles/global.sass
+++ b/styles/global.sass
@@ -62,8 +62,6 @@ a
             transition: var(--powerEase)
             height: .9rem
 
-        &#privacy
-            margin-left: 3em
 
             &:after, &:before
                 filter: brightness(40) saturate(0)
@@ -362,6 +360,9 @@ footer
         flex-wrap: wrap
         align-items: flex-start
         justify-content: space-between
+
+    #privacy
+        margin-left: 0
 
     #emailFormContainer
         margin-top: calc(var(--gutter)*2)
@@ -1249,6 +1250,7 @@ header#headerLarge
 
         #privacy
             margin-right: 2rem
+            margin-left: 3rem
 
         .bottomSplit
 
